# auxiliary-governed-attention

./: LICENSE  README.md  README_en.md  README_zh.md  requirements.txt  setup.py  部署指南.md
aga/: README.md  README_en.md  README_zh.md  __init__.py  config.py  core.py  decay.py  distributed.py  entropy_gate.py  exceptions.py  kv_store.py  persistence.py  plugin.py  pyproject.toml  streaming.py  types.py  unified_config.py
aga/adapter/: __init__.py  base.py  huggingface.py  vllm.py
aga/api/: README.md  __init__.py  __main__.py  app.py  client.py  conflict.py  models.py  routes.py  service.py  tracing.py
aga/api/visualization/: __init__.py  ann.py  events.py  knowledge.py  routing.py
aga/client/: __init__.py  portal_client.py
aga/config/: __init__.py  loader.py  portal.py  runtime.py  sync.py
aga/distributed/: __init__.py  coordinator.py  governance.py  lock.py  partition.py  sync.py
aga/docs/: product_doc_en.md  product_doc_zh.md  user_manual.md  user_manual_en.md  user_manual_zh.md
aga/encoder/: __init__.py  adapters.py  base.py  cache.py  factory.py
aga/examples/: distributed_demo.py
aga/gate/: __init__.py  decay.py  entropy_gate.py
aga/instrumentation/: __init__.py  audit_log.py  event_bus.py  forward_metrics.py
aga/monitoring/: __init__.py  alerts.py  decorators.py  http.py  logging_utils.py  metrics.py  simple_ui.py  slo.py
aga/operator/: __init__.py  aga_operator.py  bottleneck_injector.py  flash_attention3.py  manager.py  optimizations.py  parallel_attention.py  transformer.py
aga/persistence/: __init__.py  base.py  composite_adapter.py  compression.py  manager.py  memory_adapter.py  pool.py  postgres_adapter.py  redis_adapter.py  sqlite_adapter.py  versioning.py
aga/portal/: __init__.py  app.py  registry.py  routes.py  service.py
aga/production/: README.md  __init__.py  config.py  dynamic_slots.py  gate.py  operator.py  persistence.py  safety.py  slot_pool.py  writer.py
aga/retrieval/: __init__.py  ann_index.py  dynamic_loader.py
aga/retriever/: __init__.py  base.py  kv_store_retriever.py  null_retriever.py
aga/runtime/: __init__.py  aga_runtime.py  agent.py  cache.py
aga/sync/: __init__.py  backends.py  protocol.py  publisher.py  subscriber.py
aga_experiment_tool/: app.py  config.yaml  requirements.txt
aga_knowledge/: README_en.md  README_zh.md  __init__.py  alignment.py  config.py  exceptions.py  pyproject.toml  types.py
aga_knowledge/chunker/: __init__.py  base.py  condition_generator.py  document_chunker.py  fixed_size.py  image_handler.py  semantic.py  sentence.py  sliding_window.py
aga_knowledge/config_adapter/: __init__.py  adapter.py
aga_knowledge/docs/: product_doc_en.md  product_doc_zh.md  user_manual_en.md  user_manual_zh.md
aga_knowledge/encoder/: __init__.py  base.py  sentence_transformer_encoder.py  simple_encoder.py
aga_knowledge/manager/: __init__.py  knowledge_manager.py
aga_knowledge/persistence/: __init__.py  base.py  compression.py  memory_adapter.py  postgres_adapter.py  redis_adapter.py  sqlite_adapter.py  versioning.py
aga_knowledge/portal/: __init__.py  app.py  registry.py  routes.py  service.py
aga_knowledge/retriever/: __init__.py  bm25_index.py  fusion.py  hnsw_index.py  knowledge_retriever.py
aga_knowledge/scripts/sql/: README.md  postgresql_schema.sql  sqlite_schema.sql
aga_knowledge/sync/: __init__.py  backends.py  protocol.py  publisher.py
aga_observability/: README_en.md  README_zh.md  __init__.py  alert_manager.py  audit_storage.py  config.py  grafana_dashboard.py  health.py  integration.py  log_exporter.py  prometheus_exporter.py  pyproject.toml  setup.py  stack.py
aga_observability/docs/: user_manual_en.md  user_manual_zh.md
config/: ui_config.yaml
configs/: portal_config.yaml  runtime_config.yaml
docs/: Distributed_AGA_Architecture.md  Multi_Instance_Deployment.md  Portal_API_Reference.md  Production_Readiness_Analysis.md  Test_Coverage_Report.md  multi_tenant_architecture.md  日志与监控系统说明.md
docs/可视化方案/: AGA可视化完整方案.md  实施计划.md
docs/生产监控方案/: AGA生产监控完整方案.md  开发任务清单.md
examples/: production_demo.py  quick_start.py
llm/: __init__.py  client.py  prompts.py  risk_evaluator.py
llm/adapters/: __init__.py  base.py  deepseek.py  factory.py  ollama.py  openai_compat.py  vllm.py
scripts/: start_api.bat  start_api.sh  start_experiment_tool.bat  start_experiment_tool.sh  start_monitor_ui.bat  start_monitor_ui.sh  start_ollama.sh  start_portal.bat  start_portal.sh  start_vllm.sh
scripts/sql/: README.md  postgresql_schema.sql  requirements.txt  run_tests.py  setup.py  sqlite_schema.sql
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_config.py  test_core.py  test_decay.py  test_entropy_gate.py  test_gate.py  test_instrumentation.py  test_kv_store.py  test_operator.py  test_plugin.py  test_retriever.py  test_smoke.py  test_streaming.py  test_vllm_adapter.py
tests/component/: __init__.py
tests/fault/: __init__.py  test_network_partition.py  test_redis_down.py  test_stale_version.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_multi_runtime.py  test_single_node.py
tests/mocks/: __init__.py  http_mock.py  kafka_mock.py  postgres_mock.py  redis_mock.py
tests/performance/: __init__.py  latency.py  long_run.py  memory_growth.py
tests/test_knowledge/: __init__.py  test_chunker.py  test_compression.py  test_config.py  test_document_chunker.py  test_encoder.py  test_manager.py  test_persistence.py  test_postgres_adapter.py  test_redis_adapter.py  test_retriever.py  test_sync.py  test_types.py  test_versioning.py
(+46 files in other folders)
