[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aga-observability"
version = "1.0.0"
description = "Production observability stack for AGA (Auxiliary Governed Attention)"
readme = "README_en.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AGA Team"},
]
keywords = ["aga", "observability", "prometheus", "grafana", "monitoring", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "aga-core>=4.4.0",
]

[project.optional-dependencies]
prometheus = [
    "prometheus-client>=0.17.0",
]
full = [
    "prometheus-client>=0.17.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "prometheus-client>=0.17.0",
]

[tool.setuptools.packages.find]
include = ["aga_observability*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
